mel/test/yamls/egw-gatewaytestc.nextensio.net.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nextensio-egressgateway-gatewaytestc-nextensio-net
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - "gatewaytestc.nextensio.net"
